Song model created and working in console

--- a/app/index.html
+++ b/app/index.html
@@ -24,27 +24,25 @@
   <body>
 
     <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
-      <ul>
-        <li>HTML5 Boilerplate</li>
-        <li>Normalize CSS</li>
-        <li>Sass</li>
-        <li>Modernizr</li>
-        <li>Bourbon & Neat</li>
-        <li>UnderscoreJS</li>
-      </ul>
-      <p>Don't forget to update your readme file!!</p>
+      <h1>Music List</h1>
+      <p>This is a list of music that helps me code:</p>
+      <div id='playlist'>
+      </div>
+
     </div>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/underscore/underscore.js"></script>
+    <script src="../bower_components/backbone/backbone.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
+        <script src="scripts/collections/music_collection.js"></script>
+        <script src="scripts/models/music_model.js"></script>
+        <script src="scripts/views/music_view.js"></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
