working except rendering

--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,10 @@
 
     </div>
 
+    <script id='songlist'type='text/template'>
+      <li> <a href='<%= link %>'> <%= title %> </a> by <%= artist %> </li>
+    </script>
+
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
