added global App variables

--- a/app/index.html
+++ b/app/index.html
@@ -62,9 +62,11 @@
     <!-- endbuild -->
 
         <!-- build:js scripts/main.js -->
+        <script src='scripts/setup.js'></script>
         <script src="scripts/models/music_model.js"></script>
         <script src="scripts/collections/music_collection.js"></script>
         <script src="scripts/views/music_view.js"></script>
+        <script src='scripts/views/add_views.js'></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
