--- a/app/index.html
+++ b/app/index.html
@@ -42,18 +42,14 @@
 
     <script id='newsong' type='text/template'>
       <h2>Add a new song</h2>
-        <form id="titleInput"  action="index.html" method="post">
+        <form id="songInput"  action="index.html" method="post">
           <input id='input_title' type="text" placeholder=" Song Title">
-        </form>
-        <form id="artistInput"  action="index.html" method="post">
           <input id='input_artist' type="text" placeholder=" Artist Name">
-        </form>
-        <form id="linkInput"  action="index.html" method="post">
           <input id='input_link' type="text" placeholder=" Insert link">
+          <p class="btn">
+            <button id="button">Add New Song!</button>
+          </p>
         </form>
-        <p class="btn">
-          <button id="button">Add New Song!</button>
-        </p>
       </script>
 
     <!-- build:js scripts/vendor.js -->
