--- a/app/index.html
+++ b/app/index.html
@@ -37,7 +37,7 @@
 
 
     <script id='songlist'type='text/template'>
-      <li> <a href='<%= link %>'> <%= title %> </a> by <%= artist %> </li>
+      <li id='<%= _id %>'> <a href='<%= link %>'> <%= title %> </a> by <%= artist %> </li>
     </script>
 
     <script id='newsong' type='text/template'>
