started styling - identfied delete button

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <div class="hero-unit">
       <h1>Music List</h1>
       <p>This is a list of music that helps me code:</p>
-      <div id='playlist'>
+      <div id='playlist' class='list'>
       </div>
 
       <div id='addnew'>
