--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,8 @@
         <script src="scripts/collections/music_collection.js"></script>
         <script src="scripts/views/music_view.js"></script>
         <script src='scripts/views/add_views.js'></script>
+        <script src='scripts/views/edit_music.js'></script>
+        <script src='scripts/routes/app_router.js'></script>
         <script src="scripts/main.js"></script>
         <!-- endbuild -->
 </body>
