emptied addnew div on edit page

--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
 
     <script type='text/template' id='editmusicitem'>
       <li id='<%= _id%>'>
-        <form id="editInput"  action="index.html" method="post">
+        <form id="editInput">
           <input id='edit_title' type="text" placeholder=" Song Title">
           <input id='edit_artist' type="text" placeholder=" Artist Name">
           <input id='edit_link' type="text" placeholder=" Insert link">
