--- a/app/index.html
+++ b/app/index.html
@@ -52,9 +52,9 @@
     <script type='text/template' id='editmusicitem'>
       <li id='<%= _id %>'>
         <form id="editInput">
-          <input id='edit_title' type="text" placeholder= '<%= title %>'>
-          <input id='edit_artist' type="text" placeholder=" Artist Name">
-          <input id='edit_link' type="text" placeholder=" Insert link">
+          <input id='edit_title' type="text" value= '<%= title %>'>
+          <input id='edit_artist' type="text" value=" Artist Name">
+          <input id='edit_link' type="text" value=" Insert link">
           <p class="btn">
             <button id="editbtn">Edit Song!</button>
             <button id='deletebtn'>Delete</button>
