--- a/app/index.html
+++ b/app/index.html
@@ -25,13 +25,13 @@
 
     <div class="hero-unit">
       <h1>Music List</h1>
-
+      <p>This is a list of music that helps me code. Please add or edit the songs:</p>
       <div id='playlist' class='list'>
-        <p>This is a list of music that helps me code:</p>
+
       </div>
 
       <div id='addnew'>
-        <p>Please edit the information for this song:</p>
+
       </div>
     </div>
 
