fixed input in edit music

--- a/app/index.html
+++ b/app/index.html
@@ -56,8 +56,8 @@
       <li id='<%= _id %>'>
         <form id="editInput">
           <input id='edit_title' type="text" value= '<%= title %>'>
-          <input id='edit_artist' type="text" value=" Artist Name">
-          <input id='edit_link' type="text" value=" Insert link">
+          <input id='edit_artist' type="text" value=" <%= artist %>">
+          <input id='edit_link' type="text" value=" <%= link %>">
           <p class="btn">
             <button id="editbtn">Edit Song!</button>
             <button id='deletebtn'>Delete</button>
