--- a/app/index.html
+++ b/app/index.html
@@ -39,12 +39,12 @@
 
 
     <script id='songlist'type='text/template'>
-      <li id='<%= _id %>'>
+      <li id='<%= objectId %>'>
           <div class='songitem'>
             <a href='<%= link %>'><%= title %></a> by <%= artist %>
-            <span id="<%= _id %>" class='delete_btn'>  X</span>
-            <a href='#/edit/<%= _id %>'>
-              <button id="<%= _id %>" class='edit_btn'>Edit</button>
+            <span id="<%= objectId %>" class='delete_btn'>  X</span>
+            <a href='#/edit/<%= objectId %>'>
+              <button id="<%= objectId %>" class='edit_btn'>Edit</button>
             </a>
           </div>
 
@@ -53,7 +53,7 @@
     </script>
 
     <script type='text/template' id='editmusicitem'>
-      <li class= 'editform' id='<%= _id %>'>
+      <li class= 'editform' id='<%= objectId %>'>
         <form id="editInput">
           <input id='edit_title' type="text" value= '<%= title %>'><br>
           <input id='edit_artist' type="text" value=" <%= artist %>"><br>
@@ -82,7 +82,7 @@
     <!-- bower:js -->
     <script src="../bower_components/jquery/dist/jquery.js"></script>
     <script src="../bower_components/underscore/underscore.js"></script>
-    <script src="../bower_components/backbone/backbone.js"></script>
+    <script src="//www.parsecdn.com/js/parse-1.3.1.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
