--- a/app/index.html
+++ b/app/index.html
@@ -31,11 +31,9 @@
       </div>
 
       <div id='addnew'>
-
+        <a href="#/add" class="addBtn"><button>Add</button></a>
       </div>
     </div>
-
-
 
 
     <script id='songlist'type='text/template'>
@@ -47,7 +45,6 @@
               <button id="<%= objectId %>" class='edit_btn'>Edit</button>
             </a>
           </div>
-
 
       </li>
     </script>
